Kitap Resimlerinin Değişimi ve Hata Giderilmesi
- Kitapların resimleri daha iyi olanlarıyla değiştirildi.
- iPhone 6 Plusların dik konumunda görülen kitap listelerindeki bozukluk giderildi.
- Yönetici panelindeki kitap resmi kolonlarının isimlerle olan çakışması sorunu giderildi.

--- a/css/mobil.css
+++ b/css/mobil.css
@@ -551,6 +551,13 @@
 	ul.kitaplik > li {
 
 	    width: 100% !important;
+	    display: block;
+
+	}
+
+	ul.profil > li {
+
+		font-size: 0.8em;
 
 	}
 
