--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 /*
-Theme Name: Cüneyt TAŞ Kişisel İnternet Sitesi
+Theme Name: Cüneyt TAŞ
+Theme URI: http://www.cuneyt-tas.com
+Description: Kişisel İnternet Sİtesi
 Author: Cüneyt TAŞ
 Author URI: http://www.cuneyt-tas.com
-Version: 3.4
+Version: 3.8
+Tags: cüneyt, taş, cüneyt taş, web tasarım, web geliştirici, bilgisayar mühendisi, bilgisayar mühendisliği, çorum, twelve12
 */
 
 /* Kullanılması gereksiz olabilecekler (???) ile gösterilmektedir. */
